adding .env change

--- a/.env.test
+++ b/.env.test
@@ -7,4 +7,4 @@ FLASK_SKIP_DOTENV=True
 SECRET_KEY=secret-key
 TRELLO_API_KEY=testapikey
 TRELLO_API_TOKEN=testapitoken
-TRELLO_
+test_board_id=testboardid
