--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,4 @@ FLASK_ENV=development
 SECRET_KEY=secret-key
 TRELLO_API_KEY=<FILL ME IN!!!>
 TRELLO_API_TOKEN=<FILL ME IN!!!>
+test_board_id=<FILL ME IN!!!>
