Remove Trello Credentials

--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,6 @@ FLASK_SKIP_DOTENV=True
 
 # Change the following values for local development.
 SECRET_KEY=secret-key
-TRELLO_API_KEY=testapikey
-TRELLO_API_TOKEN=testapitoken
-test_board_id=testboardid
+TRELLO_API_KEY=test_key
+TRELLO_API_TOKEN=test_token
+TRELLO_BOARD_ID=test_board_id
