--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,21 @@ version: "3.9"
 
 services:
   production:
-    image: todo-app:prod
+    build:
+      target: production
+      context: .
     env_file:
-      - env.list
+      - .env
     ports:
       - "80:80"
 
   development:
-    image: todo-app:dev
+    build:
+      target: development
+      context: .
+      
     env_file:
-      - env.list
+      - .env
     ports:
       - "5000:5000"
     volumes:
