--- a/.github/workflows/my-ci-pipeline.yml
+++ b/.github/workflows/my-ci-pipeline.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: echo Hello World
+    - run: docker build --target test --tag todo-test .
+    - run: docker run todo-test
