--- a/.github/workflows/my-ci-pipeline.yml
+++ b/.github/workflows/my-ci-pipeline.yml
@@ -13,3 +13,12 @@ jobs:
     - uses: actions/checkout@v2
     - run: docker build --target test --tag todo-test .
     - run: docker run todo-test
+  deploy:
+    name: Build and deploy
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/module8'
+    steps:
+    - uses: actions/checkout@v2
+    - run: docker build --target test --tag todo-test .
+    - run: docker run todo-test
