--- a/.github/workflows/my-ci-pipeline.yml
+++ b/.github/workflows/my-ci-pipeline.yml
@@ -20,5 +20,6 @@ jobs:
     if: github.ref == 'refs/heads/module8'
     steps:
     - uses: actions/checkout@v2
-    - run: docker build --target test --tag todo-test .
+    - run: docker build --target production --tag sianl/my-todoapp .
     - run: echo ${{secrets.DOCKER_TOKEN}} | docker login --username sianl --password-stdin
+    - run: docker push sianl/my-todoapp
